<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/distancia"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/totaldekm" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:hint="@string/preco" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_gravity="center"
        android:hint="Autonomia"
        android:text="@string/precoporlitro" />

    <EditText
        android:id="@+id/editAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="number"
        android:hint="@string/autonomia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kms_por_litro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:text="@string/gasto_total"
        />

    <TextView
        android:id="@+id/txtTotalValue"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBlue"
        android:layout_gravity="center"
        android:text="@string/valor_total_rs" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/lightGreen"
        android:padding="50dp"
        android:text="@string/calcular"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
</LinearLayout>